// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<line-chart> rendered-html accessibility generic accessibility test suite accessibility: keyboard instruction component displays table in click state 1`] = `
<div class="visa-viz-keyboard-instructions-container" id="visa-viz-keyboard-instructions-container-line-chart-unit-test">
  <div>
    <p>
      Note: for VoiceOver users (mac), press and hold
      <kbd>
        Ctrl
      </kbd>
      +
      <kbd>
        Shift
      </kbd>
      when using the arrow keys for the best navigation experience.
    </p>
    <table class="vcc-ki-data-table vcc-ki-keyboard-instructions vcc-ki-state--compact vcc-ki-state--single-select" data-header="header">
      <thead class="vcc-ki-thead">
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-th" scope="col">
            Action
          </th>
          <th class="vcc-ki-th" scope="col">
            Result
          </th>
        </tr>
      </thead>
      <tbody class="vcc-ki-tbody">
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Enter
            </kbd>
            on the chart area or a line.
          </th>
          <td class="vcc-ki-td">
            Enter the chart area/drill down a level.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Shift
            </kbd>
            +
            <kbd>
              Enter
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Drill up a level.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Tab
            </kbd>
            at any time.
          </th>
          <td class="vcc-ki-td">
            Exit the chart.
          </td>
        </tr>
        <tr class="vcc-ki-disabled-row vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Space
            </kbd>
            is unused.
          </th>
          <td class="vcc-ki-td">
            No effect on this chart.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              ←
            </kbd>
            /
            <kbd>
              →
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Move among sibling lines or points.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              ↑
            </kbd>
            /
            <kbd>
              ↓
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Move among points across lines.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Esc
            </kbd>
            at any time.
          </th>
          <td class="vcc-ki-td">
            Dismiss the tooltip.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<line-chart> rendered-html accessibility generic accessibility test suite accessibility: keyboard instruction component displays table in click state with space enabled 1`] = `
<div class="visa-viz-keyboard-instructions-container" id="visa-viz-keyboard-instructions-container-line-chart-unit-test">
  <div>
    <p>
      Note: for VoiceOver users (mac), press and hold
      <kbd>
        Ctrl
      </kbd>
      +
      <kbd>
        Shift
      </kbd>
      when using the arrow keys for the best navigation experience.
    </p>
    <table class="vcc-ki-data-table vcc-ki-keyboard-instructions vcc-ki-state--compact vcc-ki-state--single-select" data-header="header">
      <thead class="vcc-ki-thead">
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-th" scope="col">
            Action
          </th>
          <th class="vcc-ki-th" scope="col">
            Result
          </th>
        </tr>
      </thead>
      <tbody class="vcc-ki-tbody">
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Enter
            </kbd>
            on the chart area or a line.
          </th>
          <td class="vcc-ki-td">
            Enter the chart area/drill down a level.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Shift
            </kbd>
            +
            <kbd>
              Enter
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Drill up a level.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Tab
            </kbd>
            at any time.
          </th>
          <td class="vcc-ki-td">
            Exit the chart.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Space
            </kbd>
            on a point.
          </th>
          <td class="vcc-ki-td">
            Select/Deselect a point.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              ←
            </kbd>
            /
            <kbd>
              →
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Move among sibling lines or points.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              ↑
            </kbd>
            /
            <kbd>
              ↓
            </kbd>
            on a line or point.
          </th>
          <td class="vcc-ki-td">
            Move among points across lines.
          </td>
        </tr>
        <tr class="vcc-ki-tr">
          <th class="vcc-ki-td" scope="row">
            <kbd>
              Esc
            </kbd>
            at any time.
          </th>
          <td class="vcc-ki-td">
            Dismiss the tooltip.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<line-chart> rendered-html accessibility generic accessibility test suite accessibility: keyboard nav: test whether space bar performs click action 1`] = `<circle class="vcl-accessibility-focus-source" cursor="default" cx="0" cy="0" data-cx="22.375" data-cy="79.79816729742207" data-fill="true" data-id="marker-Card-A-2016-01" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>`;

exports[`<line-chart> rendered-html annotations should pass annotation prop on load 1`] = `
<g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation">
  <g class="annotations">
    <g class="annotation callout rect" transform="translate(undefined, 9.966336410922754)">
      <g class="annotation-connector">
        <path class="connector" d="M50,0L50,0LNaN,0" fill="none" stroke="#6e5a55"></path>
      </g>
      <g class="annotation-subject">
        <path class="subject" d="M0,0L100,0L100,213.92L0,213.92L0,0" fill-opacity="0.1" stroke="#6e5a55"></path>
      </g>
      <g class="annotation-note" transform="translate(85.92, 0)">
        <g class="annotation-note-content" transform="translate(-10, 3)">
          <rect class="annotation-note-bg" fill="white" fill-opacity="0" height="10" width="10" x="0" y="0"></rect>
          <text class="annotation-note-label" dx="0" fill="#6e5a55" y="0">
            <tspan dy="0.8em" x="0">
              Beginning of Year
            </tspan>
          </text>
          <text class="annotation-note-title"></text>
        </g>
        <path class="note-line" d="M-10,0L0,0" stroke="#6e5a55"></path>
      </g>
    </g>
    <g class="annotation callout circle" transform="translate(undefined, 205.33333333333334)">
      <g class="annotation-connector">
        <path class="connector" d="MNaN,NaNLNaN,4.48" fill="none" stroke="#954737"></path>
      </g>
      <g class="annotation-subject">
        <path class="subject" d="M3.6739403974420594e-16,-6A6,6,0,1,1,-3.6739403974420594e-16,6A6,6,0,1,1,3.6739403974420594e-16,-6Z" fill-opacity="0" stroke="#954737"></path>
      </g>
      <g class="annotation-note" transform="translate(187.95, 4.48)">
        <g class="annotation-note-content" transform="translate(-10, 3)">
          <rect class="annotation-note-bg" fill="white" fill-opacity="0" height="10" width="10" x="0" y="0"></rect>
          <text class="annotation-note-label" dx="0" fill="#954737" y="0">
            <tspan dy="0.8em" x="0">
              Low Card B in June
            </tspan>
          </text>
          <text class="annotation-note-title"></text>
        </g>
        <path class="note-line" d="M-10,0L0,0" stroke="#954737"></path>
      </g>
    </g>
  </g>
</g>
`;

exports[`<line-chart> rendered-html annotations should pass annotation prop on update 1`] = `
<g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation">
  <g class="annotations">
    <g class="annotation callout rect" transform="translate(undefined, 9.966336410922754)">
      <g class="annotation-connector">
        <path class="connector" d="M50,0L50,0LNaN,0" fill="none" stroke="#6e5a55"></path>
      </g>
      <g class="annotation-subject">
        <path class="subject" d="M0,0L100,0L100,213.92L0,213.92L0,0" fill-opacity="0.1" stroke="#6e5a55"></path>
      </g>
      <g class="annotation-note" transform="translate(85.92, 0)">
        <g class="annotation-note-content" transform="translate(-10, 3)">
          <rect class="annotation-note-bg" fill="white" fill-opacity="0" height="10" width="10" x="0" y="0"></rect>
          <text class="annotation-note-label" dx="0" fill="#6e5a55" y="0">
            <tspan dy="0.8em" x="0">
              Beginning of Year
            </tspan>
          </text>
          <text class="annotation-note-title"></text>
        </g>
        <path class="note-line" d="M-10,0L0,0" stroke="#6e5a55"></path>
      </g>
    </g>
    <g class="annotation callout circle" transform="translate(undefined, 205.33333333333334)">
      <g class="annotation-connector">
        <path class="connector" d="MNaN,NaNLNaN,4.48" fill="none" stroke="#954737"></path>
      </g>
      <g class="annotation-subject">
        <path class="subject" d="M3.6739403974420594e-16,-6A6,6,0,1,1,-3.6739403974420594e-16,6A6,6,0,1,1,3.6739403974420594e-16,-6Z" fill-opacity="0" stroke="#954737"></path>
      </g>
      <g class="annotation-note" transform="translate(187.95, 4.48)">
        <g class="annotation-note-content" transform="translate(-10, 3)">
          <rect class="annotation-note-bg" fill="white" fill-opacity="0" height="10" width="10" x="0" y="0"></rect>
          <text class="annotation-note-label" dx="0" fill="#954737" y="0">
            <tspan dy="0.8em" x="0">
              Low Card B in June
            </tspan>
          </text>
          <text class="annotation-note-title"></text>
        </g>
        <path class="note-line" d="M-10,0L0,0" stroke="#954737"></path>
      </g>
    </g>
  </g>
</g>
`;

exports[`<line-chart> rendered-html event-emitter generic event testing marker based events [event] clickEvent: event object should emit and contain first data record when first mark is clicked 1`] = `<circle cursor="default" cx="22.375" cy="79.79816729742207" data-cx="22.375" data-cy="79.79816729742207" data-fill="true" data-id="marker-Card-A-2016-01" data-index="0" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" opacity="1" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>`;

exports[`<line-chart> rendered-html event-emitter generic event testing marker based events [event] hoverEvent: event object should emit and contain first data record when first mark is hovered 1`] = `<circle cursor="default" cx="22.375" cy="79.79816729742207" data-cx="22.375" data-cy="79.79816729742207" data-fill="true" data-id="marker-Card-A-2016-01" data-index="0" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" opacity="1" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>`;

exports[`<line-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 1`] = `Array []`;

exports[`<line-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 2`] = `Array []`;

exports[`<line-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 3`] = `Array []`;

exports[`<line-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 1`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c elementsAreInterface: accessibility.elementsAreInterface needs a boolean value either true or false",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<line-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 2`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation should have minimum 40 characters and a combined length between 40 and 500 characters",
    "font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary should have minimum 40 characters and a combined length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c statisticalNotes: accessibility.statisticalNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c structureNotes: accessibility.structureNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
]
`;

exports[`<line-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 3`] = `
Array [
  Array [
    "%c line-chart-unit-test has accessibility warnings and other messages",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<line-chart> rendered-html reference line should pass referenceLines prop 1`] = `
<g aria-hidden="true" class="line-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation">
  <g class=".line-reference" opacity="1" transform="translate(0,120.90544788768618)">
    <line class="line-reference-line" opacity="0" x1="0" x2="537" y1="0" y2="0"></line>
    <text class="line-reference-line-label" dx="0.1em" dy="0.3em" opacity="0" text-anchor="start" x="537" y="0"></text>
  </g>
</g>
`;

exports[`<line-chart> rendered-html reference line should pass referenceStyle prop 1`] = `
<g aria-hidden="true" class="line-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation">
  <g class=".line-reference" opacity="1" transform="translate(0,120.90544788768618)">
    <line class="line-reference-line" opacity="0" x1="0" x2="537" y1="0" y2="0"></line>
    <text class="line-reference-line-label" dx="0.1em" dy="0.3em" opacity="0" text-anchor="start" x="537" y="0"></text>
  </g>
</g>
`;

exports[`<line-chart> rendered-html render should render with minimal props[data,(series,ordinal,value)Accessor] given 1`] = `
<line-chart id="line-chart-unit-test">
  <div class="o-layout">
    <div class="vcl-accessibility-instructions" id="chart-instructions-line-chart-unit-test" style="position: absolute; width: 650px;">
      <p class="screen-reader-info vcl-region-label">
        Keyboard interactive line-chart, Titled: Line Chart Title. This section contains additional information about this chart. Pressing TAB will focus the keyboard instructions menu. Tabbing again takes you to the chart area.
      </p>
      <h2 class="screen-reader-info vcl-access-title">
        Chart title: Line Chart Title
      </h2>
      <h3 class="screen-reader-info vcl-access-subtitle">
        Chart subtitle: This is the line chart's subtitle
      </h3>
      <p class="screen-reader-info vcl-access-executive-summary" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-purpose" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-long-description" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-context" data-level="h3"></p>
      <h3 class="screen-reader-info vcl-access-structure-heading">
        Structure
      </h3>
      <p class="screen-reader-info vcl-access-statistics" data-level="h4"></p>
      <h4 class="screen-reader-info vcl-access-chart-layout-heading">
        Chart Layout Description
      </h4>
      <p class="screen-reader-info vcl-access-layout">
        This is a line-chart with 2 lines containing a total 24 points.
      </p>
      <p class="screen-reader-info vcl-access-xAxis">
        The chart has a horizontal X Axis, titled X Axis with a range that starts with 2016-01 and ends with 2016-12.
      </p>
      <p class="screen-reader-info vcl-access-yAxis">
        The chart has a vertical Y axis, titled Y Axis with a range that starts with 3b and ends with 10b.
      </p>
      <p class="screen-reader-info vcl-access-notes" data-annotationlevel="h3" data-level="h4"></p>
    </div>
    <div class="o-layout--chart">
      <h2 aria-hidden="true" class="line-main-title vcl-main-title" data-testid="main-title">
        Line Chart Title
      </h2>
      <p aria-hidden="true" class="line-sub-title vcl-sub-title visa-ui-text--instructions" data-testid="sub-title">
        This is the line chart's subtitle
      </p>
      <div aria-hidden="true" class="line-legend vcl-legend" role="presentation" style="display: block;">
        <svg aria-hidden="true" class="vcl-svg" data-testid="legend-container" data-type="line" focusable="false" height="48" opacity="1" role="presentation" viewBox="0 0 642 48" width="642">
          <g class="legend-padding-wrapper" transform="translate(60.5,24)">
            <g class="legend">
              <line data-stroke="#35495a" data-stroke-width="3" opacity="1" stroke="#35495a" stroke-dasharray="" stroke-width="3" x1="0" x2="28" y1="8" y2="8" style="stroke-width: 3; stroke: #35495a; opacity: 1;"></line>
              <text class="key-text" dx=".2em" dy="13" filter="url(#VCL-t-s-f-ffffffline-chart-unit-test-legend)" opacity="1" x="33" y="0">
                Card-A
              </text>
            </g>
            <g class="legend">
              <line data-stroke="#6868ba" data-stroke-width="3" opacity="1" stroke="#6868ba" stroke-dasharray="8,2" stroke-width="3" x1="60" x2="88" y1="8" y2="8" style="stroke-width: 3; stroke: #6868ba; stroke-dasharray: 8,2; opacity: 1;"></line>
              <text class="key-text" dx=".2em" dy="13" filter="url(#VCL-t-s-f-ffffffline-chart-unit-test-legend)" opacity="1" x="93" y="0">
                Card-B
              </text>
            </g>
          </g>
          <defs>
            <filter class="VCL-t-s-f-ffffff" id="VCL-t-s-f-ffffffline-chart-unit-test-legend">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1.5" result="dilatedText"></feMorphology>
              <feFlood flood-color="#ffffff" flood-opacity="1" result="whiteTextFlood"></feFlood>
              <feComposite in="whiteTextFlood" in2="dilatedText" operator="in" result="textOutline"></feComposite>
              <feMerge>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="SourceGraphic"></feMergeNode>
              </feMerge>
            </filter>
          </defs>
        </svg>
      </div>
      <keyboard-instructions>
        <div class="vcc-ki-keyboard-instructions-root" style="position: relative; width: 643.5px;">
          <div class="visa-viz-keyboard-instructions-outer-container" style="width: 416px;">
            <div class="vcc-ki-keyboard-instructions-header vcc-ki-minimize">
              <p class="vcc-ki-keyboard-heading">
                Display Keyboard Instructions
              </p>
            </div>
            <div class="visa-viz-keyboard-instructions-button-wrapper">
              <button aria-expanded="false" aria-label="display keyboard instructions" class="vcc-ki-btn-icon vcc-ki-btn-icon--light-tiny visa-viz-keyboard-instructions-button" id="visa-viz-keyboard-instructions-button-line-chart-unit-test" role="button" tabindex="0" type="button">
                <svg class="vcc-ki-icon--tiny" focusable="false" tabindex="-1">
                  <use href="#visa-viz-keyboard-instructions-info--tiny-line-chart-unit-test"></use>
                </svg>
              </button>
              <svg class="vcc-ki-icons">
                <symbol id="visa-viz-keyboard-instructions-info--tiny-line-chart-unit-test" viewbox="0 0 16 16">
                  <path d="M8.7,3.8a.68.68,0,0,1,.7.7.79.79,0,0,1-.8.8H8.5c-.4,0-.6-.3-.6-.7A.79.79,0,0,1,8.7,3.8ZM6.6,12.1l1.2-6H9l-1.2,6ZM14,8a6,6,0,1,0-6,6A6,6,0,0,0,14,8Zm2,0A8,8,0,1,1,8,0,8,8,0,0,1,16,8Z"></path>
                </symbol>
              </svg>
            </div>
            <div class="visa-viz-keyboard-instructions-container" id="visa-viz-keyboard-instructions-container-line-chart-unit-test"></div>
          </div>
        </div>
      </keyboard-instructions>
      <div class="visa-viz-d3-line-container" data-testid="chart-container" style="position: relative;">
        <div aria-label="Line Chart Title. This is the line chart's subtitle.  Navigate into the chart area by pressing ENTER." class="VCL-controller" data-group="category" id="chart-area-line-chart-unit-test" role="application" tabindex="0" style="position: absolute; top: 0; left: 0; opacity: 0; pointer-events: none; width: 0px; height: 0px;">
          Interactive line-chart.
        </div>
        <svg class="vcl-svg" data-testid="root-svg" focusable="false" height="300" role="presentation" tabindex="-1" viewBox="0 0 650 300" width="650" style="overflow: hidden;">
          <g data-testid="margin-container" id="visa-viz-margin-container-g-line-chart-unit-test" transform="translate(6.5, 3)">
            <g data-testid="padding-container" id="visa-viz-padding-container-g-line-chart-unit-test" transform="translate(50, 20)">
              <g aria-hidden="true" class="grid-group" data-testid="grid-group" focusable="false" role="presentation">
                <g class="bottom grid" data-testid="grid-bottom" fill="none" font-family="sans-serif" font-size="10" opacity="0" text-anchor="middle">
                  <path class="domain" d="M0.5,224V0.5H537.5V224" stroke="currentColor"></path>
                  <g class="tick" opacity="1" transform="translate(22.875,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(67.625,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(112.375,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(157.125,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(201.875,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(246.625,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(291.375,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(336.125,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(380.875,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(425.625,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(470.375,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(515.125,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                </g>
                <g class="grid left" data-testid="grid-left" fill="none" font-family="sans-serif" font-size="10" opacity="1" text-anchor="end">
                  <path class="domain" d="M537,224.5H0.5V0.5H537" stroke="currentColor"></path>
                  <g class="tick" opacity="1" transform="translate(0,220.3511419075022)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,190.36759826513372)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,160.38405462276523)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,130.40051098039672)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,100.41696733802823)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,70.43342369565974)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,40.44988005329124)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,10.466336410922754)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                </g>
              </g>
              <g aria-hidden="true" class="line-group line-wrapper-group" data-testid="line-group" focusable="false" role="presentation">
                <path class="entering line-plot" cursor="default" d="M22.375,79.79816729742207L67.125,81.06002164330614L111.875,59.17420748190012L156.625,59.89364501125863L201.375,52.28510885833761L246.125,55.41561512149087L290.875,46.58715130138242L335.625,45.61187960566501L380.375,56.07656204320423L425.125,38.392732478009854L469.875,43.76228828705635L514.625,18.666666666666675" data-d="M22.375,79.79816729742207L67.125,81.06002164330614L111.875,59.17420748190012L156.625,59.89364501125863L201.375,52.28510885833761L246.125,55.41561512149087L290.875,46.58715130138242L335.625,45.61187960566501L380.375,56.07656204320423L425.125,38.392732478009854L469.875,43.76228828705635L514.625,18.666666666666675" data-id="line-Card-A" data-testid="line" data-translate-x="56.5" fill="none" stroke="#35495a" stroke-dasharray="0 0" stroke-dashoffset="0" stroke-width="0.1"></path>
                <path class="entering line-plot" cursor="default" d="M22.375,112.78006530402743L67.125,171.01065257041165L111.875,179.1083820513741L156.625,143.8475672098904L201.375,178.2159921562853L246.125,205.33333333333334L290.875,202.50157824169858L335.625,117.57238434734938L380.375,152.0239016987834L425.125,170.32032450443123L469.875,106.72772993603019L514.625,141.59919560037747" data-d="M22.375,112.78006530402743L67.125,171.01065257041165L111.875,179.1083820513741L156.625,143.8475672098904L201.375,178.2159921562853L246.125,205.33333333333334L290.875,202.50157824169858L335.625,117.57238434734938L380.375,152.0239016987834L425.125,170.32032450443123L469.875,106.72772993603019L514.625,141.59919560037747" data-id="line-Card-B" data-testid="line" data-translate-x="56.5" fill="none" stroke="#6868ba" stroke-dasharray="0 0" stroke-dashoffset="0" stroke-width="0.1"></path>
              </g>
              <g aria-hidden="true" class="line-series-wrapper" data-testid="line-series-label-container" filter="url(#VCL-t-s-f-ffffffline-chart-unit-test)" focusable="false" role="presentation">
                <text class="line-series-label" cursor="default" data-id="line-series-label-Card-A" data-testid="line-series-label" data-text-anchor="start" data-translate-x="56.5" data-use-dx="false" data-use-dy="false" data-x="547" data-y="NaN" dx="0.1em" dy="0.3em" fill="#587893" opacity="1" text-anchor="start" x="547" y="18.666666666666675">
                  Card-A
                </text>
                <text class="line-series-label" cursor="default" data-id="line-series-label-Card-B" data-testid="line-series-label" data-text-anchor="start" data-translate-x="56.5" data-use-dx="false" data-use-dy="false" data-x="547" data-y="NaN" dx="0.1em" dy="0.3em" fill="#6b6bbc" opacity="1" text-anchor="start" x="547" y="141.59919560037747">
                  Card-B
                </text>
              </g>
              <g class="dot-group" data-testid="marker-group">
                <g class="line-dot-wrapper" cursor="default" data-id="marker-series-Card-A" data-testid="marker-series-group" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" tabindex="-1">
                  <circle cursor="default" data-cx="22.375" data-cy="79.79816729742207" data-fill="true" data-id="marker-Card-A-2016-01" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="67.125" data-cy="81.06002164330614" data-fill="true" data-id="marker-Card-A-2016-02" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="111.875" data-cy="59.17420748190012" data-fill="true" data-id="marker-Card-A-2016-03" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="156.625" data-cy="59.89364501125863" data-fill="true" data-id="marker-Card-A-2016-04" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="201.375" data-cy="52.28510885833761" data-fill="true" data-id="marker-Card-A-2016-05" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="246.125" data-cy="55.41561512149087" data-fill="true" data-id="marker-Card-A-2016-06" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="290.875" data-cy="46.58715130138242" data-fill="true" data-id="marker-Card-A-2016-07" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="335.625" data-cy="45.61187960566501" data-fill="true" data-id="marker-Card-A-2016-08" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="380.375" data-cy="56.07656204320423" data-fill="true" data-id="marker-Card-A-2016-09" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="425.125" data-cy="38.392732478009854" data-fill="true" data-id="marker-Card-A-2016-10" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="469.875" data-cy="43.76228828705635" data-fill="true" data-id="marker-Card-A-2016-11" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="514.625" data-cy="18.666666666666675" data-fill="true" data-id="marker-Card-A-2016-12" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#7c99b1" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#35495a" stroke-width="2" tabindex="-1"></circle>
                </g>
                <g class="line-dot-wrapper" cursor="default" data-id="marker-series-Card-B" data-testid="marker-series-group" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" tabindex="-1">
                  <circle cursor="default" data-cx="22.375" data-cy="112.78006530402743" data-fill="true" data-id="marker-Card-B-2016-01" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="67.125" data-cy="171.01065257041165" data-fill="true" data-id="marker-Card-B-2016-02" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="111.875" data-cy="179.1083820513741" data-fill="true" data-id="marker-Card-B-2016-03" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="156.625" data-cy="143.8475672098904" data-fill="true" data-id="marker-Card-B-2016-04" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="201.375" data-cy="178.2159921562853" data-fill="true" data-id="marker-Card-B-2016-05" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="246.125" data-cy="205.33333333333334" data-fill="true" data-id="marker-Card-B-2016-06" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="290.875" data-cy="202.50157824169858" data-fill="true" data-id="marker-Card-B-2016-07" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="335.625" data-cy="117.57238434734938" data-fill="true" data-id="marker-Card-B-2016-08" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="380.375" data-cy="152.0239016987834" data-fill="true" data-id="marker-Card-B-2016-09" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="425.125" data-cy="170.32032450443123" data-fill="true" data-id="marker-Card-B-2016-10" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="469.875" data-cy="106.72772993603019" data-fill="true" data-id="marker-Card-B-2016-11" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                  <circle cursor="default" data-cx="514.625" data-cy="141.59919560037747" data-fill="true" data-id="marker-Card-B-2016-12" data-r="5" data-role="img" data-testid="marker" data-translate-x="56.5" fill="#cacae7" focusable="false" id="line-chart-unit-test-123457-123457-123457" r="5" role="presentation" stroke="#6868ba" stroke-width="2" tabindex="-1"></circle>
                </g>
              </g>
              <g aria-hidden="true" class="line-dataLabel-group" data-testid="dataLabel-group-container" filter="url(#VCL-t-s-f-ffffffline-chart-unit-test)" focusable="false" role="presentation">
                <g class="line-label-wrapper" data-id="dataLabel-group-Card-A" data-testid="dataLabel-group" fill="#7c99b1" opacity="1">
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-01" data-testid="dataLabel" data-translate-x="56.5" data-x="22.375" data-y="79.79816729742207" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="22.375" y="79.79816729742207">
                    7.7b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-02" data-testid="dataLabel" data-translate-x="56.5" data-x="67.125" data-y="81.06002164330614" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="67.125" y="81.06002164330614">
                    7.6b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-03" data-testid="dataLabel" data-translate-x="56.5" data-x="111.875" data-y="59.17420748190012" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="111.875" y="59.17420748190012">
                    8.4b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-04" data-testid="dataLabel" data-translate-x="56.5" data-x="156.625" data-y="59.89364501125863" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="156.625" y="59.89364501125863">
                    8.3b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-05" data-testid="dataLabel" data-translate-x="56.5" data-x="201.375" data-y="52.28510885833761" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="201.375" y="52.28510885833761">
                    8.6b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-06" data-testid="dataLabel" data-translate-x="56.5" data-x="246.125" data-y="55.41561512149087" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="246.125" y="55.41561512149087">
                    8.5b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-07" data-testid="dataLabel" data-translate-x="56.5" data-x="290.875" data-y="46.58715130138242" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="290.875" y="46.58715130138242">
                    8.8b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-08" data-testid="dataLabel" data-translate-x="56.5" data-x="335.625" data-y="45.61187960566501" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="335.625" y="45.61187960566501">
                    8.8b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-09" data-testid="dataLabel" data-translate-x="56.5" data-x="380.375" data-y="56.07656204320423" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="380.375" y="56.07656204320423">
                    8.5b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-10" data-testid="dataLabel" data-translate-x="56.5" data-x="425.125" data-y="38.392732478009854" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="425.125" y="38.392732478009854">
                    9.1b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-11" data-testid="dataLabel" data-translate-x="56.5" data-x="469.875" data-y="43.76228828705635" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="469.875" y="43.76228828705635">
                    8.9b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-A-2016-12" data-testid="dataLabel" data-translate-x="56.5" data-x="514.625" data-y="18.666666666666675" dy="-0.6em" fill="#587893" opacity="1" text-anchor="middle" x="514.625" y="18.666666666666675">
                    9.7b
                  </text>
                </g>
                <g class="line-label-wrapper" data-id="dataLabel-group-Card-B" data-testid="dataLabel-group" fill="#cacae7" opacity="1">
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-01" data-testid="dataLabel" data-translate-x="56.5" data-x="22.375" data-y="112.78006530402743" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="22.375" y="112.78006530402743">
                    6.6b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-02" data-testid="dataLabel" data-translate-x="56.5" data-x="67.125" data-y="171.01065257041165" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="67.125" y="171.01065257041165">
                    4.6b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-03" data-testid="dataLabel" data-translate-x="56.5" data-x="111.875" data-y="179.1083820513741" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="111.875" y="179.1083820513741">
                    4.4b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-04" data-testid="dataLabel" data-translate-x="56.5" data-x="156.625" data-y="143.8475672098904" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="156.625" y="143.8475672098904">
                    5.5b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-05" data-testid="dataLabel" data-translate-x="56.5" data-x="201.375" data-y="178.2159921562853" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="201.375" y="178.2159921562853">
                    4.4b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-06" data-testid="dataLabel" data-translate-x="56.5" data-x="246.125" data-y="205.33333333333334" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="246.125" y="205.33333333333334">
                    3.5b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-07" data-testid="dataLabel" data-translate-x="56.5" data-x="290.875" data-y="202.50157824169858" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="290.875" y="202.50157824169858">
                    3.6b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-08" data-testid="dataLabel" data-translate-x="56.5" data-x="335.625" data-y="117.57238434734938" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="335.625" y="117.57238434734938">
                    6.4b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-09" data-testid="dataLabel" data-translate-x="56.5" data-x="380.375" data-y="152.0239016987834" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="380.375" y="152.0239016987834">
                    5.3b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-10" data-testid="dataLabel" data-translate-x="56.5" data-x="425.125" data-y="170.32032450443123" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="425.125" y="170.32032450443123">
                    4.7b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-11" data-testid="dataLabel" data-translate-x="56.5" data-x="469.875" data-y="106.72772993603019" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="469.875" y="106.72772993603019">
                    6.8b
                  </text>
                  <text class="line-dataLabel" cursor="default" data-id="dataLabel-Card-B-2016-12" data-testid="dataLabel" data-translate-x="56.5" data-x="514.625" data-y="141.59919560037747" dy="-0.6em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="514.625" y="141.59919560037747">
                    5.6b
                  </text>
                </g>
              </g>
              <g aria-hidden="true" class="line-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="axis bottom x" data-testid="x-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" opacity="1" role="presentation" text-anchor="middle" transform="translate(0, 224)">
                <path class="domain" d="M0.5,0.5H537.5" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(22.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-01
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(67.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-02
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(112.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-03
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(157.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-04
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(201.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-05
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(246.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-06
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(291.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-07
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(336.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-08
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(380.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-09
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(425.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-10
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(470.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-11
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(515.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      2016-12
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label bottom x" data-testid="x-axis-label" focusable="false" role="presentation" transform="translate(0, 0)" x="268.5" y="274">
                X Axis
              </text>
              <g aria-hidden="true" class="axis left y" data-testid="y-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" opacity="1" role="presentation" text-anchor="end">
                <path class="domain" d="M0.5,224.5V0.5" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,220.3511419075022)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      3b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,190.36759826513372)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      4b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,160.38405462276523)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      5b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,130.40051098039672)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      6b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,100.41696733802823)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      7b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,70.43342369565974)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      8b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,40.44988005329124)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      9b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,10.466336410922754)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      10b
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label left y" data-testid="y-axis-label" dy="1em" focusable="false" role="presentation" transform="rotate(-90)" x="-112" y="-50">
                Y Axis
              </text>
              <g aria-hidden="true" class="axis-mark axis-mark-x" data-testid="x-axis-mark" fill="none" focusable="false" font-family="sans-serif" font-size="10" opacity="1" role="presentation" text-anchor="middle" transform="translate(0, 309.8017728346077)">
                <path class="domain" d="M0.5,0.5H537.5" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(22.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(67.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(112.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(157.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(201.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(246.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(291.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(336.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(380.875,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(425.625,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(470.375,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(515.125,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
              </g>
              <g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="editable vcl-annotation-group" data-testid="editable-annotation-group" focusable="false" role="presentation"></g>
            </g>
          </g>
          <defs data-testid="pattern-defs">
            <filter class="vcl-inversion-filter" color-interpolation-filters="sRGB" id="inversion-line-chart-unit-test">
              <feColorMatrix in="SourceGraphic" type="matrix" values="-1 0 0 0 1 
        0 -1 0 0 1 
        0 0 -1 0 1
        0 0 0 1 0"></feColorMatrix>
              <feColorMatrix type="hueRotate" values="180"></feColorMatrix>
            </filter>
            <filter class="VCL-t-s-f-ffffff" id="VCL-t-s-f-ffffffline-chart-unit-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1.5" result="dilatedText"></feMorphology>
              <feFlood flood-color="#ffffff" flood-opacity="1" result="whiteTextFlood"></feFlood>
              <feComposite in="whiteTextFlood" in2="dilatedText" operator="in" result="textOutline"></feComposite>
              <feMerge>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="SourceGraphic"></feMergeNode>
              </feMerge>
            </filter>
          </defs>
        </svg>
      </div>
      <div class="line-tooltip vcl-tooltip" data-testid="tooltip-container" style="display: block; position: absolute; padding: 0.5rem; opacity: 0; background-color: #ffffff; font-size: 14px; font-weight: 400; color: #222222; border: 1px solid #565656; border-radius: 3px; pointer-events: none; min-width: 80px; max-width: 300px; z-index: 10;">
        <p style="margin: 0;"></p>
      </div>
      <data-table>
        <div class="visa-viz-data-table-outer-container" data-testid="data-table-outer-container">
          <div class="visa-viz-button-wrapper" style="padding-bottom: 0px;">
            <button aria-expanded="false" aria-label="display data table" class="vcc-btn-icon vcc-btn-icon--light-tiny visa-viz-data-table-button" id="visa-viz-data-table-button-line-chart-unit-test" role="button" tabindex="0" type="button" style="transform: translate(21.5px,
                -40px);">
              <svg class="vcc-icon--tiny" focusable="false" tabindex="-1">
                <use href="#visa-viz-view-grid--tiny-line-chart-unit-test"></use>
              </svg>
            </button>
            <svg class="vcc-icons">
              <symbol id="visa-viz-view-grid--tiny-line-chart-unit-test" viewbox="0 0 16 16">
                <path d="M5,5 L5,2 L2,2 L2,5 L5,5 Z M5,7 L2,7 C0.894905844,7 0,6.1044757 0,5 L0,2 C0,0.8955243 0.894905844,3.55271368e-15 2,3.55271368e-15 L5,3.55271368e-15 C6.10509416,3.55271368e-15 7,0.8955243 7,2 L7,5 C7,6.1044757 6.10509416,7 5,7 Z M14,5 L14,2 L11,2 L11,5 L14,5 Z M14,7 L11,7 C9.89490584,7 9,6.1044757 9,5 L9,2 C9,0.8955243 9.89490584,3.55271368e-15 11,3.55271368e-15 L14,3.55271368e-15 C15.1050942,3.55271368e-15 16,0.8955243 16,2 L16,5 C16,6.1044757 15.1050942,7 14,7 Z M5,14 L5,11 L2,11 L2,14 L5,14 Z M5,16 L2,16 C0.894905844,16 0,15.1044757 0,14 L0,11 C0,9.8955243 0.894905844,9 2,9 L5,9 C6.10509416,9 7,9.8955243 7,11 L7,14 C7,15.1044757 6.10509416,16 5,16 Z M14,14 L14,11 L11,11 L11,14 L14,14 Z M14,16 L11,16 C9.89490584,16 9,15.1044757 9,14 L9,11 C9,9.8955243 9.89490584,9 11,9 L14,9 C15.1050942,9 16,9.8955243 16,11 L16,14 C16,15.1044757 15.1050942,16 14,16 Z"></path>
                <g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
                  <mask fill="#fff">
                    <use xlink:href="#path-1"></use>
                  </mask>
                  <use fill="#000" fill-rule="nonzero" xlink:href="#path-1"></use>
                </g>
              </symbol>
            </svg>
          </div>
          <div class="visa-viz-data-table-container" data-testid="data-table-container" id="visa-viz-data-table-container-line-chart-unit-test"></div>
        </div>
      </data-table>
    </div>
  </div>
</line-chart>
`;
